# sign-detection-ml

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  yolo_default.yaml
configs/dataset/: rtsd.yaml
configs/model/: fasterrcnn_mobilenet_v3_large_fpn.yaml  yolo.yaml
docs/: design_doc.md
notebooks/: 1.0-sav-template-notebook.ipynb  2.0-sav-eda.ipynb
sign_recognition/: config.py  envs.py  train.py  train_yolo.py
sign_recognition/data/: download.py  main.py  preprocess.py  process.py
sign_recognition/features/: augmentations.py  dataloader.py  datamodule.py  dataset.py
sign_recognition/models/: dummy_model.py  dummy_module.py  evaluation.py  predict_model.py  train.py  train_model.py
sign_recognition/models/dummy/: model.py  module.py
sign_recognition/models/faster_rcnn/: model.py  module.py
sign_recognition/visualization/: evaluate.py
