[tool.poetry]
name = "sign-detection-ml"
version = "0.1.0"
description = "Project with shared code for ML"
authors = ["AstuteVision"]
readme = "README.md"
packages = [{include = "sign_recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
opendatasets = "^0.1.22"
clearml = "^1.13.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
pytorch-lightning = "^2.1.2"
albumentations = "^1.3.1"
tqdm = "^4.66.1"
numpy = "^1.26.2"
pillow = "^10.1.0"
torchmetrics = {extras = ["detection"], version = "^1.2.0"}
onnx = "^1.15.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
urllib3 = "<2"
fiftyone = "^0.22.3"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.5.0"
deptry = "^0.12.0"
mypy = "^1.7.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']


[tool.mypy]
python_version = "3.10"
warn_redundant_casts = "True"
warn_unreachable = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
disable_error_code = "attr-defined"


[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    "E501", # LineTooLong, handled by black
    "B008", # Do not perform function call (FastAPI `Depends` in argument defaults)
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.deptry]
# Ignore the following dependencies.
ignore_unused = [
    "onnx",
]
